moved assets to resources directory and added gulp build

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,6 @@
 * text=auto
 *.css linguist-vendored
 *.scss linguist-vendored
+public/build/* binary
+public/css/all.css binary
+public/js/all.js binary
